@@ -2,6 +2,10 @@
 Top of CVS tree:
 ------------------------------------------------------------------------------
 
+Trash obsolete junk.
+ common/client.c image.c item.c misc.c p_cmd.c proto.h
+Nicolas Weeger 2007-06-18
+
 Remove 'map1cmd' variable which is always 1.
  common/client.c client.h commands.c
  gnome/map.c
